--- a/net-news/leechcraft-aggregator/ChangeLog
+++ b/net-news/leechcraft-aggregator/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for net-news/leechcraft-aggregator
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/net-news/cvs-repo/gentoo-x86/net-news/leechcraft-aggregator/ChangeLog,v 1.2 2011/09/14 17:07:01 maksbotan Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/net-news/cvs-repo/gentoo-x86/net-news/leechcraft-aggregator/ChangeLog,v 1.3 2011/12/15 19:45:09 maksbotan Exp $
+
+*leechcraft-aggregator-0.4.96 (15 Dec 2011)
+
+  15 Dec 2011; Maxim Koltsov <maksbotan@gentoo.org>
+  +leechcraft-aggregator-0.4.96.ebuild:
+  Bump net-news/leechcraft-aggregator to 0.4.96, thanks to 0xd34df00d
 
 *leechcraft-aggregator-0.4.90 (14 Sep 2011)
 
