--- a/media-video/ffmpeg2theora/ChangeLog
+++ b/media-video/ffmpeg2theora/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for media-video/ffmpeg2theora
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-video/cvs-repo/gentoo-x86/media-video/ffmpeg2theora/ChangeLog,v 1.46 2011/08/06 13:50:12 aballier Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-video/cvs-repo/gentoo-x86/media-video/ffmpeg2theora/ChangeLog,v 1.47 2011/12/15 20:06:04 ago Exp $
+
+  15 Dec 2011; Agostino Sarubbo <ago@gentoo.org> ffmpeg2theora-0.28.ebuild:
+  Stable for AMD64, wrt bug #394719
 
 *ffmpeg2theora-0.28 (06 Aug 2011)
 
