--- a/x11-misc/wbar/ChangeLog
+++ b/x11-misc/wbar/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for x11-misc/wbar
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/x11-misc/cvs-repo/gentoo-x86/x11-misc/wbar/ChangeLog,v 1.13 2011/07/14 11:18:31 xarthisius Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/x11-misc/cvs-repo/gentoo-x86/x11-misc/wbar/ChangeLog,v 1.14 2011/12/15 22:56:16 pacho Exp $
+
+  15 Dec 2011; Pacho Ramos <pacho@gentoo.org> metadata.xml:
+  Drop maintainer due retirement, bug #353461
 
   14 Jul 2011; Kacper Kowalik <xarthisius@gentoo.org> wbar-2.2.2.ebuild:
   Add missing deps wrt #375131 by nzqr <candysnell@ya.ru>
