--- a/media-video/vlc/ChangeLog
+++ b/media-video/vlc/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for media-video/vlc
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-video/cvs-repo/gentoo-x86/media-video/vlc/ChangeLog,v 1.758 2011/12/09 19:58:47 aballier Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-video/cvs-repo/gentoo-x86/media-video/vlc/ChangeLog,v 1.759 2011/12/16 12:48:44 aballier Exp $
+
+  16 Dec 2011; Alexis Ballier <aballier@gentoo.org> vlc-1.2.9999.ebuild,
+  vlc-9999.ebuild:
+  bump live dep
 
 *vlc-1.1.12-r1 (09 Dec 2011)
 
