--- a/media-libs/lcms/ChangeLog
+++ b/media-libs/lcms/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for media-libs/lcms
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-libs/cvs-repo/gentoo-x86/media-libs/lcms/ChangeLog,v 1.135 2011/12/16 15:45:34 ssuominen Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-libs/cvs-repo/gentoo-x86/media-libs/lcms/ChangeLog,v 1.136 2011/12/16 15:49:16 ssuominen Exp $
+
+  16 Dec 2011; Samuli Suominen <ssuominen@gentoo.org> -lcms-2.1.ebuild,
+  -lcms-2.2.ebuild:
+  old
 
 *lcms-2.3 (16 Dec 2011)
 
