--- a/net-analyzer/fwlogwatch/ChangeLog
+++ b/net-analyzer/fwlogwatch/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for net-analyzer/fwlogwatch
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/net-analyzer/cvs-repo/gentoo-x86/net-analyzer/fwlogwatch/ChangeLog,v 1.23 2011/08/03 14:32:31 jer Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/net-analyzer/cvs-repo/gentoo-x86/net-analyzer/fwlogwatch/ChangeLog,v 1.24 2011/12/16 16:47:04 jer Exp $
+
+*fwlogwatch-1.3 (16 Dec 2011)
+
+  16 Dec 2011; Jeroen Roovers <jer@gentoo.org> +fwlogwatch-1.3.ebuild:
+  Version bump. Add more USE flags.
 
   03 Aug 2011; Jeroen Roovers <jer@gentoo.org> fwlogwatch-1.2-r1.ebuild:
   Remove "doins contrib" by Tobias Klausmann (bug #377509).
