--- a/eclass/ChangeLog
+++ b/eclass/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for eclass directory
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/eclass/cvs-repo/gentoo-x86/eclass/ChangeLog,v 1.45 2011/12/16 16:40:46 maksbotan Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/eclass/cvs-repo/gentoo-x86/eclass/ChangeLog,v 1.46 2011/12/16 20:02:48 abcd Exp $
+
+  16 Dec 2011; Jonathan Callen <abcd@gentoo.org> qt4-build.eclass:
+  Set importdir to be /usr/$(get_libdir)/qt4/imports instead of the
+  non-FHS-compliant /usr/imports
 
   16 Dec 2011; Maxim Koltsov <maksbotan@gentoo.org> leechcraft.eclass:
   Add app-arch/xz-utils dependency to leechcraft.eclass
