--- a/sys-auth/polkit-qt/ChangeLog
+++ b/sys-auth/polkit-qt/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for sys-auth/polkit-qt
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/sys-auth/cvs-repo/gentoo-x86/sys-auth/polkit-qt/ChangeLog,v 1.21 2011/12/15 17:00:33 johu Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/sys-auth/cvs-repo/gentoo-x86/sys-auth/polkit-qt/ChangeLog,v 1.22 2011/12/16 23:20:46 johu Exp $
+
+  16 Dec 2011; Johannes Huber <johu@gentoo.org> polkit-qt-0.103.0.ebuild:
+  Bump polkit dep.
 
 *polkit-qt-0.103.0 (15 Dec 2011)
 
