--- a/media-libs/ffmpegsource/ChangeLog
+++ b/media-libs/ffmpegsource/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for media-libs/ffmpegsource
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-libs/cvs-repo/gentoo-x86/media-libs/ffmpegsource/ChangeLog,v 1.4 2011/12/10 15:17:59 maksbotan Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-libs/cvs-repo/gentoo-x86/media-libs/ffmpegsource/ChangeLog,v 1.5 2011/12/17 14:32:55 aballier Exp $
+
+  17 Dec 2011; Alexis Ballier <aballier@gentoo.org>
+  ffmpegsource-2.16.2.1_pre587.ebuild:
+  works fine with ffmpeg 0.9, updating dep
 
   10 Dec 2011; Maxim Koltsov <maksbotan@gentoo.org>
   ffmpegsource-2.16.2.1_pre587.ebuild:
