--- a/dev-ruby/chronic/ChangeLog
+++ b/dev-ruby/chronic/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for dev-ruby/chronic
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-ruby/cvs-repo/gentoo-x86/dev-ruby/chronic/ChangeLog,v 1.4 2011/10/21 07:14:28 graaff Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-ruby/cvs-repo/gentoo-x86/dev-ruby/chronic/ChangeLog,v 1.5 2011/12/17 15:48:16 graaff Exp $
+
+*chronic-0.6.6 (17 Dec 2011)
+
+  17 Dec 2011; Hans de Graaff <graaff@gentoo.org> +chronic-0.6.6.ebuild:
+  Version bump. Drop rbx until problems with it have been resolved.
 
 *chronic-0.6.4-r1 (21 Oct 2011)
 
