--- a/net-wireless/bluez/ChangeLog
+++ b/net-wireless/bluez/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for net-wireless/bluez
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/net-wireless/cvs-repo/gentoo-x86/net-wireless/bluez/ChangeLog,v 1.106 2011/10/25 18:32:39 pacho Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/net-wireless/cvs-repo/gentoo-x86/net-wireless/bluez/ChangeLog,v 1.107 2011/12/17 15:55:31 mgorny Exp $
+
+  17 Dec 2011; Michał Górny <mgorny@gentoo.org> bluez-4.96-r1.ebuild:
+  The consolekit flag can be satisfied by new enough systemd as well.
 
   25 Oct 2011; Pacho Ramos <pacho@gentoo.org> -bluez-4.93.ebuild:
   Drop old.
