--- a/net-fs/autofs/ChangeLog
+++ b/net-fs/autofs/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for net-fs/autofs
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/net-fs/cvs-repo/gentoo-x86/net-fs/autofs/ChangeLog,v 1.140 2011/12/17 03:45:15 pva Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/net-fs/cvs-repo/gentoo-x86/net-fs/autofs/ChangeLog,v 1.141 2011/12/17 17:42:20 armin76 Exp $
+
+  17 Dec 2011; Raúl Porcel <armin76@gentoo.org> autofs-5.0.6-r3.ebuild:
+  alpha/ia64/sparc stable wrt #379569
 
 *autofs-5.0.6-r5 (17 Dec 2011)
 
