--- a/app-arch/star/ChangeLog
+++ b/app-arch/star/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for app-arch/star
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/app-arch/cvs-repo/gentoo-x86/app-arch/star/ChangeLog,v 1.96 2011/12/14 23:20:42 ago Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/app-arch/cvs-repo/gentoo-x86/app-arch/star/ChangeLog,v 1.97 2011/12/17 19:32:16 armin76 Exp $
+
+  17 Dec 2011; Raúl Porcel <armin76@gentoo.org> star-1.5.1-r1.ebuild:
+  alpha/ia64/sparc stable wrt #393905
 
   14 Dec 2011; Agostino Sarubbo <ago@gentoo.org> star-1.5.1-r1.ebuild:
   Stable for AMD64, wrt bug #393905
