--- a/dev-python/libgnome-python/ChangeLog
+++ b/dev-python/libgnome-python/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-python/libgnome-python
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-python/cvs-repo/gentoo-x86/dev-python/libgnome-python/ChangeLog,v 1.36 2011/02/26 13:20:08 eva Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-python/cvs-repo/gentoo-x86/dev-python/libgnome-python/ChangeLog,v 1.37 2011/12/18 02:45:10 tetromino Exp $
+
+  18 Dec 2011; Alexandre Rostovtsev <tetromino@gentoo.org>
+  libgnome-python-2.28.1.ebuild:
+  Add missing pygobject dependency and bump to EAPI1 for slot dep support.
 
   26 Feb 2011; Gilles Dartiguelongue <eva@gentoo.org>
   -libgnome-python-2.28.0.ebuild, libgnome-python-2.28.1.ebuild:
