--- a/net-misc/dropbox/ChangeLog
+++ b/net-misc/dropbox/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for net-misc/dropbox
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/net-misc/cvs-repo/gentoo-x86/net-misc/dropbox/ChangeLog,v 1.7 2011/11/16 02:46:06 naota Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/net-misc/cvs-repo/gentoo-x86/net-misc/dropbox/ChangeLog,v 1.8 2011/12/18 09:11:30 naota Exp $
+
+*dropbox-1.2.48-r1 (18 Dec 2011)
+
+  18 Dec 2011; Naohiro Aota <naota@gentoo.org> +dropbox-1.2.48-r1.ebuild:
+  Drop bundled libstdc++.so.6 #393125
 
 *dropbox-1.2.48 (16 Nov 2011)
 
