--- a/app-laptop/samsung-tools/ChangeLog
+++ b/app-laptop/samsung-tools/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for app-laptop/samsung-tools
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/app-laptop/cvs-repo/gentoo-x86/app-laptop/samsung-tools/ChangeLog,v 1.2 2011/11/11 16:05:25 angelos Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/app-laptop/cvs-repo/gentoo-x86/app-laptop/samsung-tools/ChangeLog,v 1.3 2011/12/18 10:12:20 angelos Exp $
+
+*samsung-tools-2.0 (18 Dec 2011)
+
+  18 Dec 2011; Christoph Mende <angelos@gentoo.org> +samsung-tools-2.0.ebuild:
+  Version bump
 
 *samsung-tools-1.5 (10 Nov 2011)
 
