--- a/dev-ruby/little-plugger/ChangeLog
+++ b/dev-ruby/little-plugger/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for dev-ruby/little-plugger
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-ruby/cvs-repo/gentoo-x86/dev-ruby/little-plugger/ChangeLog,v 1.6 2011/06/02 07:06:44 graaff Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-ruby/cvs-repo/gentoo-x86/dev-ruby/little-plugger/ChangeLog,v 1.7 2011/12/18 14:13:00 graaff Exp $
+
+*little-plugger-1.1.3 (18 Dec 2011)
+
+  18 Dec 2011; Hans de Graaff <graaff@gentoo.org> +little-plugger-1.1.3.ebuild:
+  Version bump.
 
   02 Jun 2011; Hans de Graaff <graaff@gentoo.org>
   little-plugger-1.1.2-r1.ebuild:
