--- a/dev-ruby/tzinfo/ChangeLog
+++ b/dev-ruby/tzinfo/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-ruby/tzinfo
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-ruby/cvs-repo/gentoo-x86/dev-ruby/tzinfo/ChangeLog,v 1.92 2011/12/15 17:46:24 ago Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-ruby/cvs-repo/gentoo-x86/dev-ruby/tzinfo/ChangeLog,v 1.93 2011/12/18 15:52:49 armin76 Exp $
+
+  18 Dec 2011; Raúl Porcel <armin76@gentoo.org> tzinfo-0.3.31.ebuild:
+  ia64/sparc stable wrt #393667
 
   15 Dec 2011; Agostino Sarubbo <ago@gentoo.org> tzinfo-0.3.31.ebuild:
   Stable for AMD64, wrt bug #393667
