--- a/dev-ruby/coderay/ChangeLog
+++ b/dev-ruby/coderay/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-ruby/coderay
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-ruby/cvs-repo/gentoo-x86/dev-ruby/coderay/ChangeLog,v 1.45 2011/12/15 17:49:41 ago Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-ruby/cvs-repo/gentoo-x86/dev-ruby/coderay/ChangeLog,v 1.46 2011/12/18 15:55:48 armin76 Exp $
+
+  18 Dec 2011; Raúl Porcel <armin76@gentoo.org> coderay-0.9.8.ebuild:
+  ia64/sparc stable wrt #393665
 
   15 Dec 2011; Agostino Sarubbo <ago@gentoo.org> coderay-0.9.8.ebuild:
   Stable for AMD64, wrt bug #393665
