--- a/net-mail/qpopper/ChangeLog
+++ b/net-mail/qpopper/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for net-mail/qpopper
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/net-mail/cvs-repo/gentoo-x86/net-mail/qpopper/ChangeLog,v 1.36 2011/10/14 19:38:57 hwoarang Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/net-mail/cvs-repo/gentoo-x86/net-mail/qpopper/ChangeLog,v 1.37 2011/12/18 17:37:40 armin76 Exp $
+
+  18 Dec 2011; Raúl Porcel <armin76@gentoo.org> qpopper-4.0.16.ebuild,
+  qpopper-4.1.0.ebuild:
+  Drop sparc keywords
 
   14 Oct 2011; Markos Chandras <hwoarang@gentoo.org> qpopper-4.1.0.ebuild:
   Stable on amd64 wrt bug #36885
