--- a/app-admin/logcheck/ChangeLog
+++ b/app-admin/logcheck/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for app-admin/logcheck
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/app-admin/cvs-repo/gentoo-x86/app-admin/logcheck/ChangeLog,v 1.20 2011/09/14 19:06:24 phajdan.jr Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/app-admin/cvs-repo/gentoo-x86/app-admin/logcheck/ChangeLog,v 1.21 2011/12/18 17:49:04 armin76 Exp $
+
+  18 Dec 2011; Raúl Porcel <armin76@gentoo.org> logcheck-1.3.13.ebuild,
+  logcheck-1.3.14.ebuild:
+  Add ~sparc wrt #387629
 
 *logcheck-1.3.14 (14 Sep 2011)
 
