--- a/media-sound/mpd/ChangeLog
+++ b/media-sound/mpd/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for media-sound/mpd
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-sound/cvs-repo/gentoo-x86/media-sound/mpd/ChangeLog,v 1.273 2011/12/04 13:01:02 hwoarang Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-sound/cvs-repo/gentoo-x86/media-sound/mpd/ChangeLog,v 1.274 2011/12/18 18:07:21 armin76 Exp $
+
+  18 Dec 2011; Raúl Porcel <armin76@gentoo.org> mpd-0.16.5.ebuild:
+  sh/sparc stable wrt #388369
 
 *mpd-0.16.6 (04 Dec 2011)
 
