--- a/media-sound/abcde/ChangeLog
+++ b/media-sound/abcde/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for media-sound/abcde
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-sound/cvs-repo/gentoo-x86/media-sound/abcde/ChangeLog,v 1.52 2011/12/16 18:14:49 ago Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-sound/cvs-repo/gentoo-x86/media-sound/abcde/ChangeLog,v 1.53 2011/12/18 18:16:17 armin76 Exp $
+
+  18 Dec 2011; Raúl Porcel <armin76@gentoo.org> abcde-2.4.1.ebuild,
+  abcde-2.4.2-r1.ebuild:
+  Drop sparc keywords
 
   16 Dec 2011; Agostino Sarubbo <ago@gentoo.org> abcde-2.4.2-r1.ebuild:
   Stable for AMD64, wrt bug #394017
