--- a/dev-java/oracle-jdk-bin/ChangeLog
+++ b/dev-java/oracle-jdk-bin/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-java/oracle-jdk-bin
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-java/cvs-repo/gentoo-x86/dev-java/oracle-jdk-bin/ChangeLog,v 1.9 2011/12/18 09:42:39 sera Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-java/cvs-repo/gentoo-x86/dev-java/oracle-jdk-bin/ChangeLog,v 1.10 2011/12/18 19:23:13 sera Exp $
+
+  18 Dec 2011; Ralph Sennhauser <sera@gentoo.org>
+  oracle-jdk-bin-1.7.0.2.ebuild:
+  Fix USE=examples
 
 *oracle-jdk-bin-1.7.0.2 (18 Dec 2011)
 
