--- a/dev-perl/Task-Weaken/ChangeLog
+++ b/dev-perl/Task-Weaken/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-perl/Task-Weaken
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-perl/cvs-repo/gentoo-x86/dev-perl/Task-Weaken/ChangeLog,v 1.18 2011/12/17 18:49:51 ago Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-perl/cvs-repo/gentoo-x86/dev-perl/Task-Weaken/ChangeLog,v 1.19 2011/12/18 19:44:27 phajdan.jr Exp $
+
+  18 Dec 2011; Pawel Hajdan jr <phajdan.jr@gentoo.org>
+  Task-Weaken-1.40.0.ebuild:
+  x86 stable wrt bug #393729
 
   17 Dec 2011; Agostino Sarubbo <ago@gentoo.org> Task-Weaken-1.40.0.ebuild:
   Stable for AMD64, wrt bug #393729
