--- a/sci-electronics/magic/ChangeLog
+++ b/sci-electronics/magic/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for sci-electronics/magic
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/sci-electronics/cvs-repo/gentoo-x86/sci-electronics/magic/ChangeLog,v 1.58 2011/12/18 11:48:40 ago Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/sci-electronics/cvs-repo/gentoo-x86/sci-electronics/magic/ChangeLog,v 1.59 2011/12/18 19:54:46 phajdan.jr Exp $
+
+  18 Dec 2011; Pawel Hajdan jr <phajdan.jr@gentoo.org> magic-7.5.202.ebuild:
+  x86 stable wrt bug #393765
 
   18 Dec 2011; Agostino Sarubbo <ago@gentoo.org> magic-7.5.202.ebuild:
   Stable for AMD64, wrt bug #393765
