--- a/media-libs/gst-rtsp-server/ChangeLog
+++ b/media-libs/gst-rtsp-server/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for media-libs/gst-rtsp-server
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-libs/cvs-repo/gentoo-x86/media-libs/gst-rtsp-server/ChangeLog,v 1.6 2011/12/14 21:46:32 ago Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-libs/cvs-repo/gentoo-x86/media-libs/gst-rtsp-server/ChangeLog,v 1.7 2011/12/18 20:04:12 phajdan.jr Exp $
+
+  18 Dec 2011; Pawel Hajdan jr <phajdan.jr@gentoo.org>
+  gst-rtsp-server-0.10.8.ebuild:
+  x86 stable wrt bug #393411
 
   14 Dec 2011; Agostino Sarubbo <ago@gentoo.org> gst-rtsp-server-0.10.8.ebuild:
   Stable for AMD64, wrt bug #393411
