--- a/dev-tex/hlatex/ChangeLog
+++ b/dev-tex/hlatex/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-tex/hlatex
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-tex/cvs-repo/gentoo-x86/dev-tex/hlatex/ChangeLog,v 1.13 2011/12/18 11:27:33 ago Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-tex/cvs-repo/gentoo-x86/dev-tex/hlatex/ChangeLog,v 1.14 2011/12/18 20:06:10 phajdan.jr Exp $
+
+  18 Dec 2011; Pawel Hajdan jr <phajdan.jr@gentoo.org> hlatex-1.0.1.ebuild:
+  x86 stable wrt bug #393847
 
   18 Dec 2011; Agostino Sarubbo <ago@gentoo.org> hlatex-1.0.1.ebuild:
   Stable for AMD64, wrt bug #393847
