--- a/x11-terms/aterm/ChangeLog
+++ b/x11-terms/aterm/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for x11-terms/aterm
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/x11-terms/cvs-repo/gentoo-x86/x11-terms/aterm/ChangeLog,v 1.117 2011/12/16 14:00:02 ago Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/x11-terms/cvs-repo/gentoo-x86/x11-terms/aterm/ChangeLog,v 1.118 2011/12/18 20:09:11 phajdan.jr Exp $
+
+  18 Dec 2011; Pawel Hajdan jr <phajdan.jr@gentoo.org> aterm-1.0.1-r2.ebuild:
+  x86 stable wrt bug #393811
 
   16 Dec 2011; Agostino Sarubbo <ago@gentoo.org> aterm-1.0.1-r2.ebuild:
   Stable for AMD64, wrt bug #393811
