--- a/dev-scheme/net-http/ChangeLog
+++ b/dev-scheme/net-http/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-scheme/net-http
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-scheme/cvs-repo/gentoo-x86/dev-scheme/net-http/ChangeLog,v 1.12 2011/12/16 16:51:28 ago Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-scheme/cvs-repo/gentoo-x86/dev-scheme/net-http/ChangeLog,v 1.13 2011/12/18 20:13:37 phajdan.jr Exp $
+
+  18 Dec 2011; Pawel Hajdan jr <phajdan.jr@gentoo.org>
+  net-http-0.3.1-r1.ebuild:
+  x86 stable wrt bug #393849
 
   16 Dec 2011; Agostino Sarubbo <ago@gentoo.org> net-http-0.3.1-r1.ebuild:
   Stable for AMD64, wrt bug #393849
