--- a/app-benchmarks/stress/ChangeLog
+++ b/app-benchmarks/stress/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for app-benchmarks/stress
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/app-benchmarks/cvs-repo/gentoo-x86/app-benchmarks/stress/ChangeLog,v 1.46 2011/12/16 21:24:19 ago Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/app-benchmarks/cvs-repo/gentoo-x86/app-benchmarks/stress/ChangeLog,v 1.47 2011/12/18 20:14:08 phajdan.jr Exp $
+
+  18 Dec 2011; Pawel Hajdan jr <phajdan.jr@gentoo.org> stress-1.0.4.ebuild:
+  x86 stable wrt bug #393701
 
   16 Dec 2011; Agostino Sarubbo <ago@gentoo.org> stress-1.0.4.ebuild:
   Stable for AMD64, wrt bug #393701
