--- a/net-libs/zeromq/ChangeLog
+++ b/net-libs/zeromq/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for net-libs/zeromq
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/net-libs/cvs-repo/gentoo-x86/net-libs/zeromq/ChangeLog,v 1.17 2011/10/03 14:55:01 djc Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/net-libs/cvs-repo/gentoo-x86/net-libs/zeromq/ChangeLog,v 1.18 2011/12/19 07:56:38 djc Exp $
+
+*zeromq-2.1.11 (19 Dec 2011)
+
+  19 Dec 2011; Dirkjan Ochtman <djc@gentoo.org> +zeromq-2.1.11.ebuild:
+  Version bump to 2.1.11.
 
 *zeromq-2.1.10 (03 Oct 2011)
 
