--- a/sys-apps/ack/ChangeLog
+++ b/sys-apps/ack/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for sys-apps/ack
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/sys-apps/cvs-repo/gentoo-x86/sys-apps/ack/ChangeLog,v 1.25 2011/12/04 20:23:45 rajiv Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/sys-apps/cvs-repo/gentoo-x86/sys-apps/ack/ChangeLog,v 1.26 2011/12/19 15:26:06 ago Exp $
+
+  19 Dec 2011; Agostino Sarubbo <ago@gentoo.org> ack-1.96.ebuild:
+  Stable for AMD64, wrt bug #395231
 
   04 Dec 2011; Rajiv Aaron Manglani <rajiv@gentoo.org> -ack-1.92.ebuild:
   cleanup.
