--- a/sec-policy/selinux-nagios/ChangeLog
+++ b/sec-policy/selinux-nagios/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for sec-policy/selinux-nagios
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/sec-policy/cvs-repo/gentoo-x86/sec-policy/selinux-nagios/ChangeLog,v 1.6 2011/11/15 10:46:42 swift Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/sec-policy/cvs-repo/gentoo-x86/sec-policy/selinux-nagios/ChangeLog,v 1.7 2011/12/19 18:17:16 swift Exp $
+
+  19 Dec 2011; <swift@gentoo.org> selinux-nagios-2.20110726-r2.ebuild:
+  Stabilize rev6
 
 *selinux-nagios-2.20110726-r2 (15 Nov 2011)
 
