--- a/perl-core/Attribute-Handlers/ChangeLog
+++ b/perl-core/Attribute-Handlers/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for perl-core/Attribute-Handlers
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/perl-core/cvs-repo/gentoo-x86/perl-core/Attribute-Handlers/ChangeLog,v 1.18 2011/12/17 18:08:31 ago Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/perl-core/cvs-repo/gentoo-x86/perl-core/Attribute-Handlers/ChangeLog,v 1.19 2011/12/19 19:21:51 tove Exp $
+
+*Attribute-Handlers-0.930.0 (19 Dec 2011)
+
+  19 Dec 2011; Torsten Veller <tove@gentoo.org>
+  +Attribute-Handlers-0.930.0.ebuild:
+  Version bump
 
   17 Dec 2011; Agostino Sarubbo <ago@gentoo.org>
   Attribute-Handlers-0.910.0.ebuild:
