--- a/x11-libs/qwt/ChangeLog
+++ b/x11-libs/qwt/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for x11-libs/qwt
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/x11-libs/cvs-repo/gentoo-x86/x11-libs/qwt/ChangeLog,v 1.87 2011/12/19 22:02:32 jlec Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/x11-libs/cvs-repo/gentoo-x86/x11-libs/qwt/ChangeLog,v 1.88 2011/12/19 23:02:01 jlec Exp $
+
+  19 Dec 2011; Justin Lecher <jlec@gentoo.org> qwt-5.2.1.ebuild,
+  qwt-6.0.0.ebuild:
+  Move to EAPI=4
 
 *qwt-6.0.1 (19 Dec 2011)
 
