--- a/perl-core/Parse-CPAN-Meta/ChangeLog
+++ b/perl-core/Parse-CPAN-Meta/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for perl-core/Parse-CPAN-Meta
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/perl-core/cvs-repo/gentoo-x86/perl-core/Parse-CPAN-Meta/ChangeLog,v 1.17 2011/12/14 23:23:50 maekke Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/perl-core/cvs-repo/gentoo-x86/perl-core/Parse-CPAN-Meta/ChangeLog,v 1.18 2011/12/20 13:15:25 ago Exp $
+
+  20 Dec 2011; Agostino Sarubbo <ago@gentoo.org>
+  Parse-CPAN-Meta-1.440.100.ebuild:
+  Stable for AMD64, wrt bug #393397
 
   14 Dec 2011; Markus Meier <maekke@gentoo.org>
   Parse-CPAN-Meta-1.440.100.ebuild:
