--- a/perl-core/Perl-OSType/ChangeLog
+++ b/perl-core/Perl-OSType/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for perl-core/Perl-OSType
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/perl-core/cvs-repo/gentoo-x86/perl-core/Perl-OSType/ChangeLog,v 1.11 2011/12/14 23:31:34 maekke Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/perl-core/cvs-repo/gentoo-x86/perl-core/Perl-OSType/ChangeLog,v 1.12 2011/12/20 13:07:02 ago Exp $
+
+  20 Dec 2011; Agostino Sarubbo <ago@gentoo.org> Perl-OSType-1.2.0.ebuild:
+  Stable for AMD64, wrt bug #393397
 
   14 Dec 2011; Markus Meier <maekke@gentoo.org> Perl-OSType-1.2.0.ebuild:
   arm stable, bug #393397
